--- a/config.env
+++ b/config.env
@@ -1,1 +1,6 @@
+
+NODE_ENV=developement
+PORT=8000
+DATABASE= mongodb+srv://wahidali--2:<PASSWORD>@cluster-2.dogaq.mongodb.net/natours?retryWrites=true&w=majority&appName=cluster-2
+DATABASE_LOCAL= mongodb://localhost:27017/natours
 DATABASE_PASSWORD = YbZExquiRk1A3ab7
