--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^5.13.22",
+    "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
   },
@@ -26,6 +26,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "webpack-cli": "^5.1.4"
   }
 }
