--- a/.env
+++ b/.env
@@ -3,12 +3,9 @@ NODE_ENV=developement
 
 # DATABASE= "mongodb+srv://wahidali--2:<PASSWORD>@cluster-2.dogaq.mongodb.net/natours?retryWrites=true&w=majority&appName=cluster-2"
 
-# DATABASE= mongodb+srv://wahidali8566:wahid@natours-cluster.8c8nn.mongodb.net/
-
-
-# DATABASE= mongodb+srv://wahidali8566:wahid@natours-cluster.8c8nn.mongodb.net/natoursProject
+DATABASE= mongodb+srv://wahidali8566:wahid@natours-cluster.8c8nn.mongodb.net/natoursProject
 
 DATABASE_LOCAL= mongodb://localhost:27017/natours
 DATABASE_PASSWORD = YbZExquiRk1A3ab7
-PORT=3000
+PORT=5000
 
