--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
