--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "wahid ali",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
